@@ -4,6 +4,7 @@ Fix org file table layout
 Update source links
 Fix sector graph peak and chart size
 Update themes
+Update human values for currency and doc category codes
 
 
 Development Portal (2019-11-12 shi)
